Update index with non-body elements, fixes #1
Added code that would've been duplicated if included while using Codepen.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
- <h1>Matthew Smith's Stage 0 Notes</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title></title>
+</head>
+<body>
+    <h1>Matthew Smith's Stage 0 Notes</h1>
  <h3><b>Thinking Like a Programmer</b></h3>
  There are 5 main types of thinking that are frequently used by programmers:
  <ol>
@@ -62,4 +68,5 @@
    in a very exact way to be able to understand it. Humans are considered "smart," by<br>
    contrast, because they are capable of compensating for and overcoming typos.</li>
  </ul>
-
+</body>
+</html>
