--- a/index.html
+++ b/index.html
@@ -4,32 +4,34 @@
   <title></title>
 </head>
 <body>
-    <h1>Matthew Smith's Stage 0 Notes</h1>
- <h3><b>Thinking Like a Programmer</b></h3>
- There are 5 main types of thinking that are frequently used by programmers:
- <ol>
-   <li><em>Procedural</em><br>
-   Involves creating clear and concise instructions for a computer to follow.</li>
-   <li><em>Abstract</em><br>
-   Involves finding ways to improve programming efficiency by helping avoid<br>
-   unnecessary repetition of work.</li>
-   <li><em>Systems</em><br>
-   Involves breaking down large problems into smaller problems and recognizing<br>
-   how those individual pieces fit together.</li>
-   <li><em>Technological Empathy</em><br>
-   Involves understanding how computers work and what they are good<br>
-   and bad at and using that knowledge to your advantage while coding.
-   <li><em>Debugging</em><br>
-   Involves using a system to make identifying and fixing bugs quick<br>
-   and relatively easy.</li>
- </ol>
- <h3><b>The Basics of the Web and HTML</b></h3>
- <dl>
-   <dt><em>The World Wide Web</em></dt>
-   <dd>A network of servers and other computers on which<br>
+
+  <h1>Intro to Programming Overview</h1>
+  <h2>Lesson 1</h2>
+  <h3>Thinking Like a Programmer</h3>
+  There are 5 main types of thinking that are frequently used by programmers:
+  <ol>
+    <li><em>Procedural</em><br>
+    Involves creating clear and concise instructions for a computer to follow.</li>
+    <li><em>Abstract</em><br>
+    Involves finding ways to improve programming efficiency by helping avoid<br>
+    unnecessary repetition of work.</li>
+    <li><em>Systems</em><br>
+    Involves breaking down large problems into smaller problems and recognizing<br>
+    how those individual pieces fit together.</li>
+    <li><em>Technological Empathy</em><br>
+    Involves understanding how computers work and what they are good<br>
+    and bad at and using that knowledge to your advantage while coding.
+    <li><em>Debugging</em><br>
+    Involves using a system to make identifying and fixing bugs quick<br>
+    and relatively easy.</li>
+  </ol>
+  <h3>The Basics of the Web and HTML</h3>
+  <dl>
+    <dt><em>The World Wide Web</em></dt>
+    <dd>A network of servers and other computers on which<br>
     HTML documents and files are hosted and accessed.</dd>
-   <dt><em>Components of the WWW</em></dt>
-   <dd>-Users who use computers to access and create content on the WWW.<br>
+    <dt><em>Components of the WWW</em></dt>
+    <dd>-Users who use computers to access and create content on the WWW.<br>
     -Computers which run programs (browsers) that display pages and files found<br>
     on the web.<br>
     -The Internet which is the largest network of computers in the world.<br>
@@ -38,11 +40,11 @@
     components. <a href="https://en.wikipedia.org/wiki/Hypertext_Transfer_Protocol">This Wikipedia
     entry</a> explains HyperText Transfer Protocol in<br>
     extreme depth.</dd>
-   <dt><em>Webpages</em></dt>
-   <dd>Text documents, written in HTML, which are read, interpreted, and displayed<br>
+    <dt><em>Webpages</em></dt>
+    <dd>Text documents, written in HTML, which are read, interpreted, and displayed<br>
     by web browsers.</dd>
-   <dt><em>HTML</em></dt>
-   <dd>HyperText Markup Language is a programming language which is the basis of<br>
+    <dt><em>HTML</em></dt>
+    <dd>HyperText Markup Language is a programming language which is the basis of<br>
     almost every webpage on the WWW. HTML documents consist of:<br>
     -Text content (what you see)<br>
     -Markup (how it looks)<br>
@@ -53,20 +55,64 @@
     <dd>-Tags: The text instructions that tell a browser how to display content.<br>
     They are always contained within angled braces. They're paired together with<br>
     an opening and closing tag, except for void tags.<br>
-    -Elements: A unit made up by a tag and the content it affects or a set of<br>
-    tags and the content between them.<br></dd>
+    -Elements: A unit made up of a tag and the content it affects, or an opening and<br>
+    closing tag and the content between them.<br></dd>
     <dt><em>Inline vs Block Tags</em></dt>
     <dd>The two types of tags within HTML are inline and block tags. Block tags form<br>
     a box around the contents wihin them.</dd>
- </dl>
- <h3><b>General Concepts</b></h3>
- <ul style="list-style-type:square">
-   <li> <em>Coding</em>: The action of writing text instructions in a language that computers can<br>
-   understand and follow.<br></li>
-   <li> <em>Correct <a href="http://www.merriam-webster.com/dictionary/syntax">Syntax</a>
-   </em>: Computers are "stupid" because they require code to be written<br>
-   in a very exact way to be able to understand it. Humans are considered "smart," by<br>
-   contrast, because they are capable of compensating for and overcoming typos.</li>
- </ul>
+    <dt><em>Coding</em></dt>
+    <dd>The action of writing text instructions in a language that computers can<br>
+    understand and follow.</dd>
+    <dt><em>Correct <a href="http://www.merriam-webster.com/dictionary/syntax">Syntax</a></em></dt>
+    <dd>Computers are "stupid" because they require code to be written<br>
+    in a very exact way to be able to understand it. Humans are considered "smart," by<br>
+    contrast, because they are capable of compensating for and overcoming typos.</dd>
+  </dl>
+  <h2>Lesson 2</h2>
+  <h3>Creating a Structured Document with HTML</h3>
+  <dl>
+    <dt><em>Text Editors</em></dt>
+    <dd>The programs used to write and edit the code for webpages. They are similar to<br>
+    word processors like Microsoft Word, but lack the formatting functions. Good<br>
+    text editors have many automatic and predictive functions that make programming<br>
+    easier. They can often be used to write code in multiple languages.</dd>
+    <dt><em>HTML vs CSS vs JavaScript</em></dt>
+    <dd>-HTML is the language used to define the structure and content of a webpage.<br>
+    -CSS is the language used to define the style of the webpage.<br>
+    -JavaScript is the language used to define the interactive components of a webpage.</dd>
+    <dt><em>DOM</em></dt>
+    <dd>Document Object Model is the standard convention used in representing<br>
+    and interacting with elements in HTML. This means that browsers all render<br>
+    HTML using the same model, resulting in a common pattern in the structure of <br>
+    all webpages (see <em>Branching Structure</em> below).</dd>
+    <dt><em>Browser Developer Tools</em></dt>
+    <dd>Add-ons or built-in features that allow you to view the DOM trees that browsers<br>
+    interpret HTML documents as, and the styles applied to the elements contained with<br>
+    these HTML documents.</dd>
+    <dt><em>Branching Structure</em></dt>
+    <dd>Because HTML elements can be nested within each other, the structure of an HTML<br>
+    document can be analogized to a tree. The more deeply nested within other elements<br>
+    an individual element is, the further up and out from the trunk of the tree it would<br>
+    be found. For example, an image might be nested within a 'div' element which is, in<br>
+    turn, nested within the 'body' element. The body may be considered the trunk of the<br>
+    tree, the div, a bough sticking out from the trunk, and the image, a twig sticking out<br>
+    from the bough.</dd>
+    <dt><em>Nested Boxes and Indentation</em></dt>
+    <dd>Every single visible element of a webpage is bounded by a box and, therefore,<br>
+    every webpage can be broken down into a series of boxes with smaller boxes inside<br>
+    of them (and often more boxes inside of these smaller boxes, and so on). Front end<br>
+    web developers do this with design mockups of webpages to begin laying out the<br>
+    framework of a page. Every layer of nesting around an element's box corresponds<br>
+    to another level of indentation.</dd>
+    <dt><em>Placeholder Content</em></dt>
+    <dd>After creating an outline of the elements on a page and indenting each element to<br>
+    the correct level, it is helpful to place text, which will help you remember what goes<br>
+    where, temporarily inside most elements.</dd>
+    <dt><em>Comments</em></dt>
+    <dd>Text notes, which the browser does not read, that are included in order to<br>
+    communicate with other people who will read the code or to leave reminders and<br>
+    explanations about specific elements.</dd>
+  </dl>
+  
 </body>
 </html>
