Update index, fixes #8

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h1 id="top">Intro to Programming Overview</h1>
+	<a href=""><img src="images/compasslogotrans.png" alt="a compass-shaped logo" width="70" height="70"/></a>
 	<div id ="toc">
 		<h2 id="toc-title">Table of Contents</h2>
 		<ul id="toc-list">
@@ -136,6 +137,7 @@
 	          			an opening and closing tag, except for void tags.</dd>
 						<dt>Elements:</dt>
 						<dd>Units made up of a tag and the content it affects, or an opening and closing tag and the content between them.</dd>
+					</dl>
 				</p>
 			</div>
 		</div>
@@ -409,6 +411,7 @@
 				</p>
 			</div>
 		</div>
+
 
 		<div id="btt">
 			<a href="#top">Back to Top</a>
