--- a/index.html
+++ b/index.html
@@ -13,18 +13,21 @@
 	</div>
 	
 	<div id ="toc">
-		<h2>Table of Contents</h2>
-		<ul>
-			<li>
-				<a href="#lesson-title-1">Lesson 1: The Basics of the Web and HTML</a>
-			</li>
-			<li>
-				<a href="#lesson-title-2">Lesson 2: Creating a Structured Document with HTML</a>
-			</li>
-			<li>
-				<a href="#lesson-title-3">Lesson 3: Adding CSS Style and HTML Structure</a>
-			</li>
-		</ul>
+		<div class="tooltip">
+			<h2>Table of Contents</h2>
+			<span class="tooltiptext">Useful when more lessons are added</span>
+		</div>
+			<ul>
+				<li>
+					<a href="#lesson-title-1">Lesson 1: The Basics of the Web and HTML</a>
+				</li>
+				<li>
+					<a href="#lesson-title-2">Lesson 2: Creating a Structured Document with HTML</a>
+				</li>
+				<li>
+					<a href="#lesson-title-3">Lesson 3: Adding CSS Style and HTML Structure</a>
+				</li>
+			</ul>
 	</div>
 
 	<div class="all-lessons"><!--contains all lessons-->
@@ -95,7 +98,7 @@
 							<dt>HTTP:</dt>
 							<dd>The protocol that is used to communicate between these
 				        		components. 
-				        		<a href="https://en.wikipedia.org/wiki/Hypertext_Transfer_Protocol">
+				        		<a href="https://en.wikipedia.org/wiki/Hypertext_Transfer_Protocol" title="Wikipedia HTTP Entry">
 				        			This Wikipedia entry
 				        		</a> explains HyperText Transfer Protocol in extreme depth.
 				        	</dd>
@@ -118,7 +121,7 @@
 						HTML
 					</div>
 					<div class="concept-explanation">
-						<p><a href="https://www.youtube.com/watch?v=fS7w-TXinPE">HyperText Markup Language</a> is a programming language which is the basis of almost every webpage on the WWW. HTML documents consist of:</p>
+						<p><a href="https://www.youtube.com/watch?v=fS7w-TXinPE" title="Eli the Computer Guy HTML Intro Video">HyperText Markup Language</a> is a programming language which is the basis of almost every webpage on the WWW. HTML documents consist of:</p>
 						<ul>
 							<li>
 				        		Text content (what you see)
@@ -215,7 +218,7 @@
 					</div>
 					<div class="concept-explanation">
 						<p>
-							<a href="https://en.wikipedia.org/wiki/Document_Object_Model">Document Object Model</a> is the standard convention used in representing and interacting with elements in HTML. This means that browsers all render HTML using the same model, resulting in a common pattern in the structure of all webpages (see <em>Branching Structure of HTML</em> below).
+							<a href="https://en.wikipedia.org/wiki/Document_Object_Model" title="Wikipedia DOM Entry">Document Object Model</a> is the standard convention used in representing and interacting with elements in HTML. This means that browsers all render HTML using the same model, resulting in a common pattern in the structure of all webpages (see <em>Branching Structure of HTML</em> below).
 						</p>
 					</div>
 				</div>
@@ -455,7 +458,7 @@
 					</div>
 					<div class="concept-explanation">
 						<p>
-							The way in which browsers decide which property values should be applied to any given elements. Each selector type has a specificity value, and when combined with other selectors, their weights are combined (the values are not actually added like decimal numbers!). The property values with higher combined specifity override those with lower. 
+							The way in which browsers decide which property values should be applied to any given elements. Each selector type has a specificity value, and when combined with other selectors, their weights are combined (the values are not actually added like decimal numbers!). The property values with higher combined specifity override those with lower. Here is a <a href ="https://specificity.keegan.st/" title="Keegan Street Specificity Calculator">specificity calculator</a>
 						</p>
 					</div>
 				</div>
@@ -480,11 +483,10 @@
 		<a id="btt" href="#top">
 			<img src="images/compassroselight.png" alt="Compass Logo" title="Back to Top" width="60" height="60" />
 		</a>
-		<a id="valid" title="W3C CSS Validated" href="http://jigsaw.w3.org/css-validator/check/referer">
-    		<img style="border:0;width:88px;height:31px"
-        	src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-        	alt="Valid CSS!" />
-    		</a>
+		<a id="valid" href="http://jigsaw.w3.org/css-validator/check/referer">
+    		<img src="images/vcss-blue.gif"
+        	alt="Valid CSS!" title="W3C CSS Validated" />
+    	</a>
     	<a id="me" href="https://plus.google.com/u/0/108193990331594746787/about/p/pub" title="My G+ Page">
 			Matt Smith
 		</a>
